--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@ Ca
         </activity>
 
         <activity android:name=".CaregiverMain"></activity>
+        <activity android:name=".ContactEmergency"></activity>
     </application>
 
 </manifest>
