--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@ Ca
 
         <activity android:name=".CaregiverMain"></activity>
         <activity android:name=".ContactEmergency"></activity>
+        <activity android:name=".PatientMain"></activity>
     </application>
 
 </manifest>
